8350668: has_extra_module_paths in filemap.cpp may be uninitialized